--- a/tweet/src/main/resources/application.properties
+++ b/tweet/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.redis.timeout=10000
 
 logging.file.name=../logs/tweet.log
 mybatis.config-location=classpath:/mybatis-config.xml
+
+qqServer.host=
+qqServer.port=
+qqServer.accessToken=
