--- a/tweet/src/main/resources/application.properties
+++ b/tweet/src/main/resources/application.properties
@@ -29,3 +29,6 @@ mybatis.config-location=classpath:/mybatis-config.xml
 qqServer.host=
 qqServer.port=
 qqServer.accessToken=
+
+qq.sendMsgTimeWait=500
+
