--- a/tweet/pom.xml
+++ b/tweet/pom.xml
@@ -20,6 +20,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.ggemo</groupId>
+            <artifactId>cqhttp-client</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.cloud</groupId>
+            <artifactId>google-cloud-translate</artifactId>
+            <version>1.94.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.8</version>
