--- a/tweet/src/main/resources/application.properties
+++ b/tweet/src/main/resources/application.properties
@@ -32,3 +32,8 @@ qqServer.accessToken=
 
 qq.sendMsgTimeWait=500
 
+googleTranslate.projectId=
+
+baiduTranslate.appid=
+baiduTranslate.securityKey=
+
